* New: [Adobe Typekit](https://typekit.com) support to typography theme options.
* New: Choose to display related posts as a small grid at *Appearance > Theme Options > Content > Single Posts > Related Posts Style*.
* New: You can now use the CSS class `tb-scoll-to` to set any generic button or link to scroll to an element ID on the current page.
* Improvement: Expanded video background support.
    * YouTube and Vimeo support added.
    * Simplified options for inputting video.
    * Additional HTML5 video formats (mp4, webm, ogv) automatically included, if exist.
    * Better dynamic video re-sizing to fit area, based on inputted aspect ratio.
    * Progressive loading for longer videos.
    * Fallback image now displays on large mobile devices, where background video isn't supported.
* Improvement: Design enhancements for default post showcase display.
* Improvement: Design enhancements for Magnific Popup lightbox navigation.
* Improvement: Design enhancements to Divider element.
* Improvement: Design enhancements to Progress Bars element.
* Improvement: Design enhancements to Milestone element.
* Improvement: Design enhancements to Milestone Ring element.
* Improvement: Design enhancements to Testimonial element.
* Improvement: Better mobile fallback for parallax background images.
* Improvement: Redesign of Team Member element.
* Improvement: With a hero unit, when selecting to bold text, a header tag will now be used, allowing for more flexibility in fonts used.
* Improvement: Added option to shade slider images for overlaid text readability; this applies to post slider and simple slider elements.
* Improvement: When inputting a specific list of pages for post element query, you can now use slugs for pages, posts, and portfolio items.
* Improvement: When selecting for a post grid element to "popout" in builder, there is now padding to separate from the browser edge.
* Improvement: More default spacing between elements in custom layouts.